# sky-atc

./: Dockerfile  Makefile  SETUP.md  pyproject.toml
sky_atc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/UNKNOWN.egg-info/: SOURCES.txt
src/proto/: pod_provider.proto
src/python/integration_tests/: test_modal.py  test_runpod.py
src/python/sky_atc/: __init__.py  __main__.py  k8s_util.py  models.py  pod_provider.py
src/python/sky_atc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/python/sky_atc/lambdalabs/: gpu_querier.py
src/python/sky_atc/modal/: __init__.py
src/python/sky_atc/runpod/: __init__.py  gpu_querier.py
src/python/skyatc.egg-info/: SOURCES.txt  requires.txt
src/python/tests/: test_k8s_util.py  test_pod_provider.py
src/sky_atc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/skyatc.egg-info/: PKG-INFO  SOURCES.txt
