[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sky-atc"
authors = [
    {name = "Alex Wu", email = "alexanderwu@berkeley.edu"},
]
description = "SkyATC"
readme = "README.md"
requires-python = ">=3.10"
keywords = []
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "grpcio",
    # My local protoc (from conda) is stuck at 3.18.1, so protobuf will yell at
    # runtime if we don't bound this.
    "protobuf<=3.20",
    "kubernetes",
]
dynamic = ["version"]

[project.optional-dependencies]
aws = ["awscli"]
runpod = ["runpod", "pandas", "requests"]
modal = ["docker", "modal"]
lambdalabs = ["requests"]


[tool.setuptools.packages.find]
where = ["src/python", "src/python/sky_atc"]